# HardwareMonitoring-Final

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
edge_monitor/: .gitignore  Dockerfile  pyproject.toml
edge_monitor/src/: run_all.py
edge_monitor/src/edge_monitor/: edge_monitor.py  logger_config.py  metrics.py  utils.py
edge_monitor/src/edge_monitor/transport/: http_transfer.py
edge_monitor/tests/: test_edge_monitor.py  test_live_test.py
edge_monitor_dashboard/: Dockerfile  nginx.conf
edge_monitor_dashboard/src/app/modules/metrics/components/system-monitor/: system-monitor.html
edge_monitor_dashboard/src/app/modules/metrics/models/: metricsModel.ts
edgemonitor-backend/: Dockerfile  pom.xml
edgemonitor-backend/src/main/java/com/edgemonitor/edgemonitor_backend/advice/: LoggingAdvice.java
edgemonitor-backend/src/main/java/com/edgemonitor/edgemonitor_backend/controller/: AuthController.java
edgemonitor-backend/src/main/java/com/edgemonitor/edgemonitor_backend/utils/: JWTUtil.java
edgemonitor-backend/src/test/java/com/edgemonitor/edgemonitor_backend/: EdgemonitorBackendApplicationTest.java
mysql/init/: init.sql
